--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
 
         <div class="row gy-4 posts-list">
 
-          {% for post in posts reversed %}
+          {% for post in posts %}
             <div class="col-xl-4 col-md-6">
             <article>
               <a href="/post/{{ post.id }}">
